--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -104,7 +104,7 @@
             android:id="@+id/btn_demo_custom"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:text="@string/btn_demo_custom"
+            android:text="@string/btn_demo_create_mode"
             />
 
         <Button
@@ -119,6 +119,20 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:text="@string/btn_filtering_observables"
+            />
+
+        <Button
+            android:id="@+id/btn_combining_observables"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/btn_combining_observables"
+            />
+
+        <Button
+            android:id="@+id/btn_error_handler"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/btn_error_handler_operators"
             />
     </LinearLayout>
 </ScrollView>
